Finalized sample run-through, cleanup and consolidation next

--- a/Housing-cleaned-up.ipynb
+++ b/Housing-cleaned-up.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 1) Collect all parameters which are used as input to this project\n",
+    "\n",
+    "# 2) Collect processing steps in a description\n",
+    "\n",
+    "# 3) Step through process and showcase interim results and decisions derived \n",
+    "\n",
+    "# 4) Collect overall results and predictions\n",
+    "\n",
+    "# 5) Write a how-to: use the generated model to predict prices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -1116,7 +1135,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# If you want to save the learned model (p.71), use pickle or joblib\n",
