Started cleanup / created Python file and made some progress

--- a/Housing-cleaned-up.ipynb
+++ b/Housing-cleaned-up.ipynb
@@ -9,14 +9,9 @@
    "outputs": [],
    "source": [
     "# 1) Collect all parameters which are used as input to this project\n",
-    "\n",
-    "# 2) Collect processing steps in a description\n",
-    "\n",
-    "# 3) Step through process and showcase interim results and decisions derived \n",
-    "\n",
-    "# 4) Collect overall results and predictions\n",
-    "\n",
-    "# 5) Write a how-to: use the generated model to predict prices\n"
+    "DOWNLOAD_ROOT=\"https://raw.githubusercontent.com/ageron/handson-ml/master/\"\n",
+    "HOUSING_PATH=\"datasets/housing\"\n",
+    "HOUSING_URL=DOWNLOAD_ROOT + HOUSING_PATH + \"/housing.tgz\"\n"
    ]
   },
   {
