Stochastic gradient descent + Polynomial Regression basics

--- a/gradient_descent.ipynb
+++ b/gradient_descent.ipynb
@@ -8,8 +8,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 4.23775111],\n",
-       "       [ 2.88668411]])"
+       "array([[ 4.39761351],\n",
+       "       [ 2.72366607]])"
       ]
      },
      "execution_count": 1,
@@ -19,9 +19,6 @@
    ],
    "source": [
     "# same data as in linreg\n",
-    "%matplotlib inline\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "X = 2 * np.random.rand(100, 1)\n",
@@ -42,6 +39,71 @@
     "    theta = theta - eta * gradients\n",
     "\n",
     "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.35514283],\n",
+       "       [ 2.74706623]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (p. 118) Simulated annealing (reducing the learning rate for SGD)\n",
+    "n_epochs = 50\n",
+    "t0, t1 = 5, 50 # learning schedule hyperparameters\n",
+    "\n",
+    "def learning_schedule(t):\n",
+    "    return t0 / (t + t1)\n",
+    "\n",
+    "theta = np.random.randn(2, 1)  # random initialization\n",
+    "\n",
+    "for epoch in range(n_epochs):\n",
+    "    for i in range(m):\n",
+    "        random_index = np.random.randint(m)\n",
+    "        xi = X_b[random_index:random_index + 1]\n",
+    "        yi = y[random_index:random_index + 1]\n",
+    "        gradients = 2 * xi.T.dot(xi.dot(theta) - yi)\n",
+    "        eta = learning_schedule(epoch * m + i)\n",
+    "        theta = theta - eta * gradients\n",
+    "\n",
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 4.08501501]), array([ 2.99421965]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (p. 119) same, but using sklearn\n",
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "sgd_reg = SGDRegressor(n_iter=50, penalty=None, eta0=0.01)\n",
+    "sgd_reg.fit(X, y.ravel())\n",
+    "\n",
+    "sgd_reg.intercept_, sgd_reg.coef_"
    ]
   },
   {
