SVM with polynomial kernel

--- a/Support Vector Machines.ipynb
+++ b/Support Vector Machines.ipynb
@@ -39,6 +39,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (p. 149) nonlinear SVM \n",
+    "# Erratum: should use moon dataset as per the book, but does not\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
+    "poly_svm_cfl = Pipeline((\n",
+    "    (\"poly_features\", PolynomialFeatures(degree=3)),\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"svm_cfl\", LinearSVC(C=10, loss=\"hinge\"))\n",
+    "))\n",
+    "\n",
+    "poly_svm_cfl.fit(X, y)\n",
+    "poly_svm_cfl.predict([[5.5, 1.7]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (p. 150) \"kernel trick\"\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "poly_kernel_svm_cfl = Pipeline((\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"svm_clf\", SVC(kernel=\"poly\", degree=3, coef0=1, C=5))\n",
+    "))\n",
+    "\n",
+    "poly_kernel_svm_cfl.fit(X, y)\n",
+    "poly_kernel_svm_cfl.predict([[5.5, 1.7]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
