--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,49 @@
     "    result = f.eval()\n",
     "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading Cal. housing from http://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.tgz to /home/ax/scikit_learn_data\n",
+      "[[ -3.74651413e+01]\n",
+      " [  4.35734153e-01]\n",
+      " [  9.33829229e-03]\n",
+      " [ -1.06622010e-01]\n",
+      " [  6.44106984e-01]\n",
+      " [ -4.25131839e-06]\n",
+      " [ -3.77322501e-03]\n",
+      " [ -4.26648885e-01]\n",
+      " [ -4.40514028e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (p. 236) Linear regression with TensorFlow on the housing data set\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "housing = fetch_california_housing()\n",
+    "m, n = housing.data.shape\n",
+    "housing_data_plus_bias = np.c_[np.ones((m, 1)), housing.data]\n",
+    "\n",
+    "X = tf.constant(housing_data_plus_bias, dtype=tf.float32, name=\"X\")\n",
+    "y = tf.constant(housing.target.reshape(-1, 1), dtype=tf.float32, name=\"y\")\n",
+    "XT = tf.transpose(X)\n",
+    "# standard normal equation using TF API\n",
+    "theta = tf.matmul(tf.matmul(tf.matrix_inverse(tf.matmul(XT, X)), XT), y)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    theta_value = theta.eval()\n",
+    "    \n",
+    "print(theta_value)"
    ]
   },
   {
